# jpvian-careers-website

./: LICENSE  README.md  app.py  pyproject.toml  requirements.txt
static/: css.css  jc.js
templates/: index.html
