[tool.poetry]
name = "repl-nix-jpvian-careers-website"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "repl_nix_jpvian_careers_website"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.3"
flask-mysql = "^1.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
